--- a/questioner/static/questioner/modelling.css
+++ b/questioner/static/questioner/modelling.css
@@ -11,16 +11,70 @@ th {
     border-collapse: collapse;
 }
 
+/* The navigation bar */
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+  }
+
 /* Style the submit button for evaluation */ 
-input[type=submit] {
-    padding: 10px 10px;
-    cursor: pointer;
-    background-color: #ddd;
-    border: 0 none;
-    border-radius: 5px;
-    margin-bottom: 1em;
+.navbar input[type=submit] {
+    float: left;
+    display: block;
+    background-color: #333;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    width: 30%;
 }
 
-input[type=submit]:hover {
-    background-color: #bbb;
+.navbar input[type=submit]:hover {
+    background: #ddd;
+    color: black;
+    cursor: pointer;
+}
+
+/* Change background on mouse-over */
+.navbar a:hover {
+    background: #ddd;
+    color: black;
+}
+
+.navbar-centered input{
+    float: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+  
+/* Links inside the navbar */
+.navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    width: 30%
+}
+
+.navbar-right a {
+    float: right;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    width: 30%
+}
+
+/* Main content */
+.main {
+    margin-top: 60px; /* Add a top margin to avoid content overlay */
 }
