--- a/questioner/static/questioner/index.css
+++ b/questioner/static/questioner/index.css
@@ -1,3 +1,9 @@
+/* Main font and color style */
+body {
+    color: #333;
+    font-family: Flama,Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+
 /* Style the app logo at the center top of the page */ 
 .logo{
     position: relative;
