Add support for multi-part part studio questions

--- a/questioner/templates/questioner/modelling.html
+++ b/questioner/templates/questioner/modelling.html
@@ -20,7 +20,7 @@
             </form>
             <!-- View CAD drawing in new tab -->
             <div class="navbar-right">
-                <a href="https://cad.onshape.com/documents/{{ question.os_doc_id }}/w/{{ question.os_workspace_id }}/e/{{ question.os_drawing_element_id }}/" target="_blank" rel="noopener noreferrer">View CAD drawing</a>
+                <a href="https://cad.onshape.com/documents/{{ question.did }}/v/{{ question.vid }}/e/{{ question.os_drawing_eid }}/" target="_blank" rel="noopener noreferrer">View CAD drawing</a>
             </div>
         </div>
         <div class="main">
