Squashed commit of the following:
commit ce0f9ea21692125b22d4e95ea30b6cf063085a58
Merge: 5a560ff b6921c6
Author: Felix-Deng <felixdeng102@gmail.com>
Date:   Wed Jan 25 13:16:00 2023 -0500

    Merge pull request #18 from PTC-Education/new_question_model

    Add support for multi-part part studio questions

commit b6921c645fbc6686fc2852aa4e5c30feb7b14349
Author: Yuanzhe Deng <felixdeng102@gmail.com>
Date:   Wed Jan 25 13:14:48 2023 -0500

    Add support for multi-part part studio questions

commit 5a560fffa72e69e5ab6b26a412d7510ed0cceb51
Author: Matt Mueller <54808875+matthewlouismueller@users.noreply.github.com>
Date:   Tue Jan 24 18:38:46 2023 -0500

    update readme with shell procedure

commit 5d9e24f4b56573d9d3f79fc53f085fc0df240050
Merge: 0e31802 41509d5
Author: Felix-Deng <felixdeng102@gmail.com>
Date:   Mon Jan 23 16:14:37 2023 -0500

    Merge pull request #17 from PTC-Education/new_question_model

    New inheritance model structure

commit 41509d59943d64d78f3604b8b97e3c4d866f3bbf
Author: Yuanzhe Deng <felixdeng102@gmail.com>
Date:   Mon Jan 23 15:30:45 2023 -0500

    New inheretance model structure

commit 0e318022f188e89e505b8250ab5a69a7f426e9cb
Author: Matt Mueller <54808875+matthewlouismueller@users.noreply.github.com>
Date:   Thu Jan 19 16:27:19 2023 -0500

    added css, update readme, bug fixes

commit d3ccb639e803f52bac8b103825554a64eebed8ec
Author: Matt Mueller <54808875+matthewlouismueller@users.noreply.github.com>
Date:   Wed Jan 11 08:31:13 2023 -0500

    Bug fixes, error checking, jpeg exclude

commit 5cc0227009ec67e38cd8f03f3b4fa9ae9e128846
Merge: 8ade2fd f9afdf8
Author: Matt Mueller <54808875+matthewlouismueller@users.noreply.github.com>
Date:   Mon Jan 9 17:04:33 2023 -0500

    Merge pull request #9 from PTC-Education/quitting-active-question

    haven't fixed back warning

commit f9afdf864e0d61683e146aad3021024003df4961
Author: Matt Mueller <54808875+matthewlouismueller@users.noreply.github.com>
Date:   Mon Jan 9 17:03:11 2023 -0500


--- a/questioner/templates/questioner/modelling.html
+++ b/questioner/templates/questioner/modelling.html
@@ -3,26 +3,34 @@
     <head>
         {% load static %}
         <link rel="stylesheet" href="{% static 'questioner/modelling.css' %}">
+        <!-- Load pop-up alert when user trying to go back to index while modelling -->
+        <script src="{% static 'questioner/return_alert.js' %}" type="text/javascript"></script>
     </head>
     <body>
-        <h2>{{ question.question_name }}</h2>
-        <img src="{{ question.thumbnail }}" width="20%"/>
-        <p><a href="{% url 'questioner:show_pdf' question.cad_drawing %}" target="_blank" rel="noopener noreferrer">View CAD drawings here ...</a></p>
-        <!-- If submission failed (model incorrect) -->
-        <div>
-            {% if fail_message %}
-                <!-- Print out model comparison table -->
-                {{ fail_message |safe }}
-                <br /><br />
-                <!-- Buttom to allow re-submission-->
-                <form action="{% url 'questioner:check' question.question_id user.os_user_id %}">
-                    <input type="submit" value="Re-submit for evaluation"/>
-                </form>
-            {% else %}
-                <form action="{% url 'questioner:check' question.question_id user.os_user_id %}">
-                    <input type="submit" value="Submit for evaluation"/>
-                </form>
+        <div class="navbar">
+            <!-- Go back to index page -->
+            <a href="{% url 'questioner:index' user.os_user_id %}" onclick="return confirm_alert()">Back to Home</a>
+            <!-- Submit/Re-submit for evaluation -->
+            <form class="navbar-centered" action="{% url 'questioner:check' question.question_type question.question_id user.os_user_id %}">
+                {% if model_comparison %}
+                    <input type="submit" value="Re-submit"/>
+                {% else %}
+                    <input type="submit" value="Submit"/>
+                {% endif %}
+            </form>
+            <!-- View CAD drawing in new tab -->
+            <div class="navbar-right">
+                <a href="https://cad.onshape.com/documents/{{ question.did }}/v/{{ question.vid }}/e/{{ question.os_drawing_eid }}/" target="_blank" rel="noopener noreferrer">View CAD drawing</a>
+            </div>
+        </div>
+        <div class="main">
+            <!-- Print out model comparison table if inaccurate -->
+            {% if model_comparison %}
+                {{ model_comparison |safe }}
             {% endif %}
+            <br /><br />
+            <!-- Show drawing in right panel -->
+            <img src="{{ question.drawing_jpeg }}" width="100%"/>
         </div>
     </body>
 </html>
