Change logo, index page improvements

--- a/questioner/templates/questioner/index.html
+++ b/questioner/templates/questioner/index.html
@@ -10,7 +10,7 @@
         <!-- Load app logo at the top of the page -->
         <div class="logo">
             <br /><br />
-            <img src="{% static 'questioner/images/ptc_edu_logo.png' %}" alt="app_logo" width="100%" />
+            <img src="{% static 'questioner/images/logo.png' %}" alt="app_logo" width="100%" />
         </div>
         <!-- Print out error message if any -->
         <div>
@@ -22,10 +22,10 @@
         <div>
             <h3>Instructions:</h3>
             <ol>
-                <li>Launch this app in an empty Part Studio with no features</li>
-                <li>Pick a model of your choice from the list below and click "Start"</li>
-                <li>You have <strong>one hour</strong> to model the chosen part based on provided drawing(s)</li>
-                <li>Click "Submit" at the top of the app when you finish and your part will be checked against the reference model</li>
+                <li>Launch this app in an empty Onshape tab with no features</li>
+                <li>Pick a question of your choice from the list below to start or retry, if you completed the question before</li>
+                <li>You have up to <strong>one hour</strong> to complete the chosen question based on provided drawing(s)</li>
+                <li>Click "Submit" at the top of the app when you finish and your model will be automatically checked against the reference model</li>
             </ol>
         </div>
         <!-- Search menu to filter by question names -->
