--- a/questioner/templates/questioner/index.html
+++ b/questioner/templates/questioner/index.html
@@ -8,9 +8,8 @@
     </head>
     <body>
         <!-- Load app logo at the top of the page -->
-        <div class="logo">
-            <br /><br />
-            <img src="{% static 'questioner/images/logo.png' %}" alt="app_logo" width="100%" />
+        <div id="logo">
+            <img id="logo" src="{% static 'questioner/images/logo.svg' %}" alt="app_logo" width="95%"/>
         </div>
         <!-- Print out error message if any -->
         <div>
@@ -22,10 +21,10 @@
         <div>
             <h3>Instructions:</h3>
             <ol>
-                <li>Launch this app in an empty Onshape tab with no features</li>
-                <li>Pick a question of your choice from the list below to start or retry, if you completed the question before</li>
-                <li>You have up to <strong>one hour</strong> to complete the chosen question based on provided drawing(s)</li>
-                <li>Click "Submit" at the top of the app when you finish and your model will be automatically checked against the reference model</li>
+                <li>Launch this app in an empty Onshape tab</li>
+                <li>Pick a question of your choice from the list below</li>
+                <li>You have up to <strong>one hour</strong> to complete the challenge</li>
+                <li>Click "Submit" at the top of the app when you finish</li>
             </ol>
         </div>
         <!-- Search menu to filter by question names -->
@@ -101,5 +100,9 @@
         </section>
         <!-- Enable hide-and-show for accordions -->
         <script src="{% static 'questioner/accordion.js' %}" type="text/javascript"></script>
+        <!-- Disclaimer -->
+        <div>
+            <p id="disclaimer"><b>DISCLAIMER: </b>By using this app you are agreeing to have anonymized data about your modeling recorded and used for research purposes.</p>
+        </div>
     </body>
 </html>
